<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="server_name">Server Name:</string>
	<string name="app_name">SRV1 Console</string>
	<string name="default_server">192.168.1.115</string>
	<string name="srv1connect_name">SRV1 Connect</string>
	<string name="srv1settings_name">SRV1 Settings</string>
	<string name="connect">Connect</string>
	<string name="save">Save</string>
	<string name="revert">Revert</string>
<string name="advanced_control_string">Used advanced motion control mode</string>
</resources>
