<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:keepScreenOn="true"
    android:padding="10dip">

    <TextView
        android:id="@+id/server_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_name"/>
    <EditText
        android:id="@+id/server_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:layout_below="@id/server_label"/>
    <CheckBox
        android:id="@+id/advanced_control_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/server_field"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dip"
        android:text="@string/advanced_control_string"/>      
    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dip"
        android:text="@string/save"/>         
    <Button
        android:id="@+id/revert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/save_button"
        android:layout_alignTop="@id/save_button"
        android:layout_marginLeft="10dip"
        android:text="@string/revert"/> 
     
</RelativeLayout>

