<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:keepScreenOn="true"
    android:padding="10dip">

    <TextView
        android:id="@+id/server_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_name"/>
    <EditText
        android:id="@+id/server_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:text="@string/default_server"
        android:layout_below="@id/server_label"/>
    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/server_field"
        android:layout_alignParentRight="true"
        android:text="@string/connect"
        android:layout_marginLeft="10dip"/>        
</RelativeLayout>

